@@ -1,6 +1,9 @@
 v3.7.6 (XXXX-XX-XX)
 -------------------
 
+* Improve performance and memory efficiency of agency restart from persisted
+  database directory.
+
 * Added the following agency-related metrics:
   - `arangodb_agency_client_lookup_table_size`: current number of entries in
     agency client id lookup table. This gauge is available only on agent
